# Django_Stripe

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/: admin.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/models/: item.py
main/templates/: base.html
main/templates/payment_system/: cancel.html  item_detail.html  item_list.html  success.html
payment_system/: settings.py  urls.py
