[tool.poetry]
name = "django+stripe"
version = "0.1.0"
description = ""
authors = ["Konstantin Volkov <k1st.volkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
